package org.abstractfactory.demo2;

public interface Connection {
    void show();
}
