package org.abstractfactory.demo2;

public class OracleStatement implements Statement {
    @Override
    public void show() {
        System.out.println("this is OracleStatement");
    }
}
