package org.abstractfactory.demo2;

public interface Statement {
    void show();
}
